# Astra-VM

AVM/: .gitignore  AVM.csproj  AVM.sln  BytesSerializer.cs  DynamicModule.cs  Memory.cs  MemoryLogger.cs  OpCode.cs  Program.cs  VM.cs  VM_Allocation.cs  VM_Cast.cs  VM_Command.cs  VM_Compare.cs  VM_Jump.cs  VM_Math.cs  VM_Ptr.cs  VM_Sections.cs
RustVM/: .gitignore  Cargo.toml
RustVM/src/: binary_file.rs  compiled_module.rs  example.rs  functions.rs  main.rs  memory.rs  opcodes.rs  vm.rs
RustVM/src/functions/: compare_functions.rs  math_functions.rs  mod.rs
RustVM/src/vm/: binary_file.rs  compiled_module.rs  memory.rs  mod.rs  opcodes.rs  vm.rs
RustVM/src/vm/functions/: math_functions.rs  mod.rs  negate_function.rs  vm_command_functions.rs
RustVM/src/vm/winframework/: mod.rs
