[package]
name = "RustVM"
version = "0.1.0"
edition = "2024"

[dependencies]
num_enum = "0.7"
stopwatch = "0.0.7"
num-traits = "0.2.19"
paste = "1.0.15"
lazy_static = "1.5.0"

[dependencies.windows]
version = "0.52"
features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_Graphics", "Win32_UI", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"]